--- a/APTRS/static/css/report-table-of-content.css
+++ b/APTRS/static/css/report-table-of-content.css
@@ -1,9 +1,12 @@
 /**  Start of Page 2 **/
 
   /**  Table of Conent CSS **/
+
+
   #toc {
     
     page: no-chapter;
+    page-break-before: always;
   }
 
   
