--- a/APTRS/static/css/report-page.css
+++ b/APTRS/static/css/report-page.css
@@ -2,32 +2,33 @@
 
 /** Load some font files**/
 @font-face {
-    font-family: Fira Sans;
-    font-weight: 400;
-    src: url('file:////static//font//firasans-regular.otf')
-  }
-  @font-face {
-    font-family: Fira Sans;
-    font-style: italic;
-    font-weight: 400;
-    src: url(file:////static//font//firasans-italic.otf);
-  }
-  @font-face {
-    font-family: Fira Sans;
-    font-weight: 300;
-    src: url(file:////static//font//firasans-light.otf);
-  }
-  @font-face {
-    font-family: Fira Sans;
-    font-style: italic;
-    font-weight: 300;
-    src: url(file:////static//font//firasans-lightitalic.otf);
-  }
-  @font-face {
-    font-family: Fira Sans;
-    font-weight: 700;
-    src: url(file:////static//font//firasans-bold.otf);
-  }
+  font-family: Fira Sans;
+  font-weight: 400;
+  src: url('/static/font/firasans-regular.otf');
+}
+@font-face {
+  font-family: Fira Sans;
+  font-style: italic;
+  font-weight: 400;
+  src: url('/static/font/firasans-italic.otf');
+}
+@font-face {
+  font-family: Fira Sans;
+  font-weight: 300;
+  src: url('/static/font/firasans-light.otf');
+}
+@font-face {
+  font-family: Fira Sans;
+  font-style: italic;
+  font-weight: 300;
+  src: url('/static/font/firasans-lightitalic.otf');
+}
+@font-face {
+  font-family: Fira Sans;
+  font-weight: 700;
+  src: url('/static/font/firasans-bold.otf');
+}
+
 
 
   /* Page Settings */
