--- a/APTRS/templates/report.html
+++ b/APTRS/templates/report.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <base href="http://127.0.0.1:8000" >
+    <base href="{{ request.scheme }}://{{ request.get_host }}">
     <meta charset="utf-8">
     <link href="/static/css/report-page.css" rel="stylesheet">
     <link href="/static/css/report-cover-page.css" rel="stylesheet">
