--- a/APTRS/templates/report.html
+++ b/APTRS/templates/report.html
@@ -1,14 +1,18 @@
 {% load content_sanitization %}
 <html>
   <head>
-    <base href="{{ request.scheme }}://{{ request.get_host }}">
+    {% if settings.USE_DOCKER %}
+      <base href="http://127.0.0.1:8000">
+    {% else %}
+      <base href="{{ request.scheme }}://{{ request.get_host }}">
+    {% endif %}
     <meta charset="utf-8">
-    <link href="/static-report/css/report-page.css" rel="stylesheet">
-    <link href="/static-report/css/report-cover-page.css" rel="stylesheet">
-    <link href="/static-report/css/report-table-of-content.css" rel="stylesheet">
-    <link href="/static-report/css/report-executive-summary.css" rel="stylesheet">
-    <link href="/static-report/css/report-vulnerabilities-summary.css" rel="stylesheet">
-    <link href="/static-report/css/report-vulnerability-details.css" rel="stylesheet">
+    <link href="/static/css/report-page.css" rel="stylesheet">
+    <link href="/static/css/report-cover-page.css" rel="stylesheet">
+    <link href="/static/css/report-table-of-content.css" rel="stylesheet">
+    <link href="/static/css/report-executive-summary.css" rel="stylesheet">
+    <link href="/static/css/report-vulnerabilities-summary.css" rel="stylesheet">
+    <link href="/static/css/report-vulnerability-details.css" rel="stylesheet">
 
    
     <title>Report</title>
