fixed pdf report table content split row error, fixed unicode added in the table of content

--- a/APTRS/static/css/report-table-of-content.css
+++ b/APTRS/static/css/report-table-of-content.css
@@ -29,7 +29,7 @@
   }
   #toc ul li::before {
     color: #fbc847;
-    content: '• ';
+    content: '\2022 ';  /** Unicode for •  , some reason pdf have unicode for • after weasyprint version upgrade **/
     font-size: 40pt;
     line-height: 16pt;
     vertical-align: bottom;
