--- a/APTRS/static/css/report-page.css
+++ b/APTRS/static/css/report-page.css
@@ -100,8 +100,10 @@
 .styled-table th,
 .styled-table td {
     padding: 12px 15px;
+    word-wrap: break-word; /* Enables wrapping of long text */
+    overflow: hidden;      /* Hides overflow if wrapping is not enough */
+    white-space: normal;   /* Ensures text can wrap onto new lines */
 }
-
 .styled-table tbody tr {
     border-bottom: 1px solid #dddddd;
 }
