--- a/APTRS/templates/report.html
+++ b/APTRS/templates/report.html
@@ -9,6 +9,7 @@
     <link href="/static/css/report-executive-summary.css" rel="stylesheet">
     <link href="/static/css/report-vulnerabilities-summary.css" rel="stylesheet">
     <link href="/static/css/report-vulnerability-details.css" rel="stylesheet">
+    <meta charset="UTF-8">
 
    
     <title>Report</title>
