removed ckeditor, fixed pdf report with updated models

--- a/APTRS/templates/cover-page.html
+++ b/APTRS/templates/cover-page.html
@@ -2,8 +2,7 @@
     <h1 id="coverheading">{{project.testingtype}} {{project.projecttype}} {{Report_type}} Report Of {{project.name}} For {{project.companyname.name}}</h1>
 
       <div class="project-details">
-        <Created>Created By: {{settings.ORG}}</Created></br>
-        <presendby>Prepared By: {{project.owner.full_name}}</presendby></br>
+        <Created>Created By: {{mycomany}}</Created></br>
         <generatedate>Generated on: {% now "F j, Y" %}</generatedate>
       
       <div>
