fixed css formating for pdf report, added support for code block, fixed font type and add missing fonts, fixed ckeditor and report html sanitization

--- a/APTRS/static/css/report-page.css
+++ b/APTRS/static/css/report-page.css
@@ -2,32 +2,37 @@
 
 /** Load some font files**/
 @font-face {
-  font-family: Fira Sans;
+  font-family: 'Fira Sans';
   font-weight: 400;
-  src: url('/static-report/font/firasans-regular.otf');
+  src: url('/static/font/FiraSans-Regular.ttf');
 }
+
 @font-face {
-  font-family: Fira Sans;
+  font-family: 'Fira Sans';
   font-style: italic;
   font-weight: 400;
-  src: url('/static-report/font/firasans-italic.otf');
+  src: url('/static/font/FiraSans-Italic.ttf');
 }
+
 @font-face {
-  font-family: Fira Sans;
+  font-family: 'Fira Sans';
   font-weight: 300;
-  src: url('/static-report/font/firasans-light.otf');
+  src: url('/static/font/FiraSans-Thin.ttf');
 }
+
 @font-face {
-  font-family: Fira Sans;
+  font-family: 'Fira Sans';
   font-style: italic;
   font-weight: 300;
-  src: url('/static-report/font/firasans-lightitalic.otf');
+  src: url('/static/font/FiraSans-Italic.ttf'); /* same italic version as 400 weight */
 }
+
 @font-face {
-  font-family: Fira Sans;
+  font-family: 'Fira Sans';
   font-weight: 700;
-  src: url('/static-report/font/firasans-bold.otf');
+  src: url('/static/font/FiraSans-SemiBold.ttf');
 }
+
 
 
 
@@ -61,10 +66,18 @@
     color: #393939;
     font-family: Fira Sans;
     font-size: 11pt;
-    font-weight: 300;
+    font-weight: 400;
     margin: 0;
     
   }
+
+  strong {
+    font-weight: bold;   /** FOr some reason bold is not working in pdf even with strong tag adding css for strong resolve it**/
+}
+
+i {
+  font-style: italic;
+}
 
 /** Executive sumrrary and other page Title text CSS**/
 .report-title {
