fixed worker stuck, updated tasks, removed unwanted context from reports

--- a/APTRS/templates/executivesummary.html
+++ b/APTRS/templates/executivesummary.html
@@ -4,7 +4,7 @@
     <h1 id="executivesummary-title" class="report-title">Executive Summary</h1>
       
     <p>
-  The pentest was conducted by {{ settings.ORG }} on {{ project.name }} using the {{ standard|join:", " }} standards to identify vulnerabilities exploitable by attackers.
+  The pentest was conducted by {{mycomany}} on {{ project.name }} using the {{ standard|join:", " }} standards to identify vulnerabilities exploitable by attackers.
   The testing methodology encompassed both manual and automated techniques, evaluating the application's security posture.
   During the assessment, a total of {{ totalvulnerability }} vulnerabilities were identified, varying in severity from Critical to Informational.
   Based on the pentest results, it is strongly advised to address these identified vulnerabilities promptly, enhancing the service's overall security posture.
