updated table, fixed ckeditor is changed to dark on light mode

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -109,7 +109,7 @@ p {
 
 .dark .shadow {
 
-  background: #22223c !important;
+  background: #374151 !important;
   
 }
 
@@ -125,7 +125,7 @@ p {
 
 .shadow {
 
-  background: #64b5f6 !important;
+  background: #374151 !important;
 
 }
 
