added html tag with tailwind class, fixed CKeditor not rendering heading and bold text

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -129,6 +129,35 @@ p {
 
 }
 
+h1 {
+  @apply text-4xl font-bold leading-tight;
+}
+
+h2 {
+  @apply text-3xl font-semibold leading-snug;
+}
+
+h3 {
+  @apply text-2xl font-medium leading-normal;
+}
+
+h4 {
+  @apply text-xl font-normal leading-relaxed;
+}
+
+h5 {
+  @apply text-lg font-light leading-loose;
+}
+
+h6 {
+  @apply text-base font-thin leading-loose;
+}
+
+strong {
+  @apply font-bold;
+}
+
+
 .custom-ckeditor-dark {
   /* Overrides the border radius setting in the theme. */
   --ck-border-radius: 4px;
@@ -243,4 +272,6 @@ p {
 
 
 }
+
+
 
